--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div><a href="folder-01\first.html">flexbox</a></div>
+    <div><a href="folder-01\flexbox.html">flexbox</a></div>
     
 </body>
 </html>
