--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my journey</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div><a href="folder-01\flexbox.html">flexbox</a></div>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="theme">
+      <div class="folder"><a href="folder-01\flexbox.html"><img src="flexbox.png" alt="flexbox" class="img"></a></div>
+    </div>
+  </body>
 </html>
